# my-media-kit

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml
docs/: README.md  _config.yml  acceptance-test.md  architecture-decisions.md  backlog.md  index.md  llm-tasks.md
docs/_layouts/: default.html
docs/dev-log/: 2026-04-10.md  2026-04-11.md  2026-04-14.md  2026-04-15.md  README.md
docs/user-guide/: README.md
src/: index.html
src-tauri/: .tauri-private-key.pub  Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/crates/ai-kit/: Cargo.toml
src-tauri/crates/ai-kit/src/: lib.rs  registry.rs  request.rs  secret_store.rs
src-tauri/crates/ai-kit/src/providers/: claude.rs  gemini.rs  groq.rs  mlx_lm.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs
src-tauri/crates/content-kit/: Cargo.toml
src-tauri/crates/content-kit/src/: batch.rs  blog_article.rs  chapters.rs  duplicate.rs  filler.rs  lib.rs  prompt_cut.rs  summary.rs  transcript_filler_scan.rs  translate.rs  viral_clips.rs  youtube_pack.rs
src-tauri/crates/content-kit/tests/: groq_api_e2e.rs  mlx_lm_smoke.rs  mlx_local_e2e.rs  mlx_use_case_quality.rs  new_features_e2e.rs  openai_pipeline_e2e.rs  translate_smoke.rs
src-tauri/crates/creator-core/: Cargo.toml
src-tauri/crates/creator-core/src/: abort.rs  ai.rs  cut.rs  detection.rs  error.rs  lib.rs  nle.rs  silence.rs  time.rs  transcription.rs
src-tauri/crates/media-kit/: Cargo.toml
src-tauri/crates/media-kit/src/: error.rs  ffmpeg.rs  lib.rs  probe.rs  wav.rs
src-tauri/crates/media-kit/tests/: real_media_smoke.rs
src-tauri/crates/nle-kit/: Cargo.toml
src-tauri/crates/nle-kit/src/: fcpxml.rs  lib.rs  writer.rs  xmeml.rs
src-tauri/crates/nle-kit/tests/: real_media_smoke.rs
src-tauri/crates/silence-kit/: Cargo.toml
src-tauri/crates/silence-kit/src/: lib.rs  regions.rs  rms.rs  threshold.rs
src-tauri/crates/silence-kit/tests/: real_media_smoke.rs
src-tauri/crates/transcription-kit/: Cargo.toml
src-tauri/crates/transcription-kit/src/: catalog.rs  groq_whisper.rs  lib.rs  mlx_whisper.rs  openai_whisper.rs  transcriber.rs
src-tauri/crates/transcription-kit/tests/: mlx_whisper_smoke.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: ai.rs  content.rs  export.rs  files.rs  media.rs  meta.rs  mlx_server.rs  mod.rs  nle.rs  output.rs  silence.rs  transcription.rs  youtube.rs
src-tauri/tests/: end_to_end_content_pipeline.rs  end_to_end_full_autocut.rs  end_to_end_silence_cut.rs  end_to_end_youtube_pipeline.rs
src/js/: header.js  main.js  sidebar.js  source-manager.js  source-panel.js  source-store.js  updater.js  util.js
src/js/features/: autocut-ai-panel.js  autocut-cut-store.js  autocut-export-panel.js  autocut-silence-panel.js  autocut.js  blog-article.js  chapters.js  provider-model-defaults.js  settings.js  summary.js  transcribe.js  translate.js  viral-clips.js  youtube-pack.js
src/styles/: main.css
user-docs/: features.md  getting-started.md
