[package]
name = "creator-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Domain models and shared errors for My Media Kit"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
