[package]
name = "nle-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FCPXML / xmeml exporters for NLE round-tripping"

[dependencies]
creator-core = { path = "../creator-core" }
serde = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
media-kit = { path = "../media-kit" }
silence-kit = { path = "../silence-kit" }
tokio = { workspace = true }
