[package]
name = "transcription-kit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Whisper transcription with word-level timestamps via whisper-rs"

[dependencies]
creator-core = { path = "../creator-core" }
media-kit = { path = "../media-kit" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
uuid = { workspace = true }
# reqwest with multipart for Groq Whisper file upload
reqwest = { workspace = true, features = ["multipart"] }

# whisper-rs is added in Phase 4 once cmake is confirmed installed on the
# build host. Depending on it here forces every `cargo check` to rebuild
# whisper.cpp via cmake, which is expensive and blocks developers without
# cmake installed. Feature-gate it later behind a `whisper` cargo feature.
# whisper-rs = { version = "0.14", default-features = false }
